--- a/hugo.toml
+++ b/hugo.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://(name of your GitHub acc).github.io/(repo name)/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'My New Static webpage made with Hugo'
